--- a/index.html
+++ b/index.html
@@ -66,14 +66,9 @@
 
         <p class="subtitle">Fun and rewarding language learning for couples</p>
 
-        <form class="subscribeForm">
-          <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
-          <button class="submit" type="submit" data-subscribe-track>Get Early Access</button>
-        </form>
-
-        <a class="button challenge" href="https://coupling.substack.com/p/update12" target="_blank" rel="noopener">
-          <i class="fal fa-newspaper"></i>
-          Coupling is Available Now!
+        <a class="button ctaButton" href="/app">
+          <i class="fal fa-rocket"></i>
+          Get Started Learning
         </a>
       </div>
 
@@ -119,8 +114,6 @@
           </p>
         </div>
       </div>
-
-      <p><b><a href="https://coupling.substack.com/p/introducing-coupling" target="_blank" rel="noopener">Read more about Coupling&hellip;</a></b></p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
@@ -285,7 +278,7 @@
 
   <section class="subscribe">
     <div class="sectionInner">
-      <h3>Try Coupling for Free to Learn Any Lanugage</h3>
+      <h3>Over 100 Languages Supported</h3>
 
       <div class="sectionInnerColumns">
         <div class="pourImage">
@@ -293,8 +286,10 @@
         </div>
 
         <form class="subscribeForm">
-          <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
-          <button class="submit" type="submit" data-subscribe-track>Get Notified</button>
+          <a class="button purple ctaButton" href="/app">
+            <i class="fal fa-rocket"></i>
+            Get Started Now
+          </a>
         </form>
       </div>
     </div>
@@ -342,7 +337,8 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update12" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F74fc0a33-2e7c-4471-8646-34b2458a6044_218x138.png)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update12" target="_blank" rel="noopener">
+            <img src="https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F98dddc1c-52c5-4c20-a8c2-f52963c67041_666x1182.png">
             <div class="blogOverlay">
               <h3 class="blogTitle">Major Updates on Coupling</h3>
               <p class="blogSubtitle">For language learning with a partner. A new look and onboarding process!</p>
@@ -370,9 +366,10 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update11" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F890dc715-7a56-4994-925c-92ce594d66fc_206x174.png)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update11" target="_blank" rel="noopener">
+            <img src="https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F44aa29e7-ac8e-4963-b80e-d5d60a46599b_1416x1258.png">
             <div class="blogOverlay">
-              <h3 class="blogTitle">New Vocabulary Starter Decks + Anki Importer</h3>
+              <h3 class="blogTitle">New Vocabulary Starter Decks</h3>
               <p class="blogSubtitle">Now featuring starter decks for 50+ languages with 200+ essential words and phrases</p>
             </div>
           </a>
@@ -398,7 +395,8 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update10" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F2dbc2bd5-313a-4b49-930e-656ba43fc4b1_454x360.png)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update10" target="_blank" rel="noopener">
+            <img src="https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2Fd9dca8d5-fc11-422b-8c69-487d303d4df6_1469x796.png">
             <div class="blogOverlay">
               <h3 class="blogTitle">Updates on Coupling (04/01)</h3>
               <p class="blogSubtitle">Get the app for free now. New streaks and goals feature!</p>
@@ -426,7 +424,8 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update9" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F05090773-c645-4632-8b73-99244034d60e_818x1358.png)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update9" target="_blank" rel="noopener">
+            <img src="https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2Ff32194e4-8aa2-4c84-83d3-fb9d73fceb87_818x1402.png">
             <div class="blogOverlay">
               <h3 class="blogTitle">Updates on Coupling (3/19)</h3>
               <p class="blogSubtitle">&#127897;&#65039; Add custom audio recordings from you and your partner!</p>
@@ -454,7 +453,8 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update8" target="_blank" rel="noopener" style="background-image: url(/assets/img/logo.png)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update8" target="_blank" rel="noopener">
+            <img src="/assets/img/logo.svg">
             <div class="blogOverlay">
               <h3 class="blogTitle">Updates on Coupling (03/11)</h3>
               <p class="blogSubtitle">Coupling's roadmap. Added support for Cantonese</p>
@@ -482,7 +482,8 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update7" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2Fda727977-d2a1-4396-ac20-98c7a8471234_644x1152.png)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update7" target="_blank" rel="noopener">
+            <img src="https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2Fc443b7f2-754e-414f-b01e-3b42737ae22c_2385x656.png">
             <div class="blogOverlay">
               <h3 class="blogTitle">Updates on Coupling (2/26)</h3>
               <p class="blogSubtitle">&#128156; Ready to try out! Check out the Coupling Discord</p>
