--- a/challenge/index.html
+++ b/challenge/index.html
@@ -50,7 +50,7 @@
 
 <link rel="stylesheet" href="/css/index.css?v=2">
 
-<body data-type="home">
+<body data-type="challenge">
   <div id="container">
   <section class="hero">
     <div class="sectionInner">
@@ -64,7 +64,7 @@
 
         <img class="hero heroImgMobile" src="/assets/img/phones.png">
 
-        <p class="subtitle">Learn a language with your native speaking partner</p>
+        <p class="subtitle">Pledge money, learn a language, get money back</p>
 
         <a class="button ctaButton" href="/app">
           <i class="fal fa-rocket"></i>
@@ -73,6 +73,66 @@
       </div>
 
       <img class="hero heroImgDesktop" src="/assets/img/phones.png?v=2">
+    </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="problem">
+    <div class="sectionInner">
+      <h3>
+        <i class="fal fa-question-circle"></i>
+        How It Works
+      </h3>
+      
+      <p>
+        A big challenge to language learning is motivation. Coupling adds two
+        motivators: money and your partner
+      </p>
+
+      <ul class="howItWorks">
+        <li>
+          <div>
+            <i class="fal fa-money-bill"></i>
+          </div>
+          <p>1. Commit $30 this month towards learning a language</p>
+        </li> 
+
+        <li>
+          <div>
+            <i class="fal fa-hand-holding-usd"></i>
+          </div>
+          <p>
+            2. If you skip a day, $0.50 goes to your partner and $0.50 goes to our tip cup 
+          </p>
+        </li>
+
+        <li>
+          <div>
+            <i class="fal fa-calendar-check"></i>
+          </div>
+          <p>
+            3. For each day you complete a learning goal, earn $1 back!
+          </p>
+        </li>
+      </ul>
+
+      <p>The more you follow through on your goals, the more you earn back</p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
@@ -146,14 +206,15 @@
 
   <section class="coach">
     <div class="sectionInner">
-      <h3>A Partner By Your Side</h3>
+      <h3>Your Partner as a Cheerleader</h3>
 
       <div class="sectionInnerColumns reverse">
         <img src="/assets/img/challenges.png">
 
         <div>
           <p>
-            A language journey that includes your partner
+            Coupling pulls your partner into your language journey to 
+            contribute and motivate
           </p>
 
           <ul class="bulletPoints">
@@ -192,9 +253,54 @@
 
   </section>
 
+  <section class="language">
+    <div class="sectionInner">
+      <h3>Fueling Motivation</h3>
+
+      <div class="sectionInnerColumns">
+        <img src="/assets/img/messenger.png?v=2">
+        <div>
+          <ul class="bulletPoints">
+            <li>
+              <i class="fal fa-money-bill"></i>
+              Pledge money up front to cement your goal to learn your partner's language
+            </li>
+            <li>
+              <i class="fal fa-hand-holding-usd"></i>
+              Earn money back through studying, rest goes to your partner and our tip cups!
+            </li>
+            <li>
+              <i class="fal fa-rocket"></i>
+              See your streak and statistics shoot up on your language learning dashboard 
+            </li>
+          </ul>
+
+          <b>Try it free for a week and we'll refund the pledge if you are not satisified</b>
+        </div>
+      </div>
+    </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
   <section class="subscribe">
     <div class="sectionInner">
-      <h3>Over 100 Languages Supported</h3>
+      <h3>Over 100 Languages Supported!</h3>
 
       <div class="sectionInnerColumns">
         <div class="pourImage">
@@ -202,9 +308,9 @@
         </div>
 
         <form class="subscribeForm">
-          <a class="button ctaButton" href="/app">
+          <a class="button purple ctaButton" href="/app">
             <i class="fal fa-rocket"></i>
-            Get Started Together 
+            Take the Pledge to Learn 
           </a>
         </form>
       </div>
@@ -450,10 +556,22 @@
       <img src="/assets/img/me.jpg">
 
       <p>
-        Hey! I’m <a href="https://twitter.com/kevopuff" target="_blank" rel="noopener">Kevin</a>, a developer
-        and designer. I’ve been learning Chinese with the help of my wife for
-        years. I started Coupling to help myself and other couples who have
-        tried to learn each other's languages
+        Hey! I’m <a href="https://twitter.com/andgokevin" target="_blank" rel="noopener">Kevin</a>, a
+        developer and designer. My wife Heidi is from China. I’ve been
+        self-learning Chinese for years. I started Coupling to help myself and
+        other couples who have tried to learn each other's languages.
+        Eventually, I hope this brings the world a little bit closer in
+        understanding each other
+      </p>
+
+      <p>
+        I've been grinding on building Coupling out of my pocket for months.
+        I'm taking the commitment that for each day I don't complete my
+        language learning goals, I'm donating $1 to my charity of choice
+      </p>
+
+      <p style="text-align: center">
+        Contact me at <a href="mailto: kevin@learncoupling.com">kevin@learncoupling.com</a>
       </p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -480,10 +598,10 @@
       <a href="https://twitter.com/learncoupling" target="_blank" rel="noopener" data-twitter-track>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
       </a>
-      <a href="https://coupling.substack.com/" target="_blank" rel="noopener">
-        <i class="fal fa-newspaper"></i>
-      </a>
       <!--
+      <a href="https://facebook.com/learncoupling" target="_blank" rel="noopener" data-fb-track>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/></svg>
+      </a>
       <a href="https://instagram.com/learncoupling" target="_blank" rel="noopener" data-instagram-track>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
       </a>
