--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <meta name="title" content="Coupling | Learn Your Loved One's Language">
 <meta name="og:title" content="Coupling | Learn Your Loved One's Language">
 <meta name="twitter:title" content="Coupling | Learn Your Loved One's Language">
-<meta name="description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
-<meta name="og:description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
-<meta name="twitter:description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
+<meta name="description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
+<meta name="og:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
+<meta name="twitter:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
