--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,7 +1,7 @@
-<title>Coupling | Language Learning With Love One's</title>
-<meta name="title" content="Coupling | Language Learning With Love One's">
-<meta name="og:title" content="Coupling | Language Learning With Love One's">
-<meta name="twitter:title" content="Coupling | Language Learning With Love One's">
+<title>Coupling | Language Learning With Loved Ones</title>
+<meta name="title" content="Coupling | Language Learning With Loved Ones">
+<meta name="og:title" content="Coupling | Language Learning With Loved Ones">
+<meta name="twitter:title" content="Coupling | Language Learning With Loved Ones">
 <meta name="description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
 <meta name="og:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
 <meta name="twitter:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
