--- a/index.html
+++ b/index.html
@@ -93,33 +93,30 @@
 
   </section>
 
-  <section class="flashcard">
+  <section class="coach">
     <div class="sectionInner">
-      <h3>A Powerful Language Learning App</h3>
+      <h3>A Partner By Your Side</h3>
 
-      <div class="sectionInnerColumns">
-        <img src="/assets/img/library.png">
+      <div class="sectionInnerColumns reverse">
+        <img src="/assets/img/pastMoments.png">
 
         <div>
           <p>
-            Lock words into memory with <a href="https://wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="noopener">spaced
-            repetition flashcards</a>
+            Create <a href="https://coupling.substack.com/p/update15" target="_blank">moments</a> with your partner through your language journey
           </p>
 
           <ul class="bulletPoints">
             <li>
-              <i class="fal fa-chart-line"></i>
-              The more you learn a word, the less you have to review it
-            </li>
-            <li>
-              <i class="fal fa-books"></i>
-              Pull flashcards from a content library of starter decks and
-              booster packs
-            </li>
-            <li>
               <i class="fal fa-sparkles"></i>
-              Audio, dictionary lookups, translations, and breakdowns for any
-              word or phrase you want
+              Learn through interactive mini-games with your partner 
+            </li>
+            <li>
+              <i class="fal fa-plus"></i>
+              Add audio recordings, notes, and vocabulary for each other
+            </li>
+            <li>
+              <i class="fal fa-envelope"></i>
+              Receive progress reports in your inboxes with learning statistics
             </li>
           </ul>
         </div>
@@ -144,30 +141,32 @@
 
   </section>
 
-  <section class="coach">
+  <section class="flashcard">
     <div class="sectionInner">
-      <h3>A Partner By Your Side</h3>
+      <h3>A Powerful Language Learning App</h3>
 
-      <div class="sectionInnerColumns reverse">
-        <img src="/assets/img/challenges.png">
+      <div class="sectionInnerColumns">
+        <img src="/assets/img/review.png">
 
         <div>
           <p>
-            A language journey that includes your partner
+            Lock words into memory with <a href="https://wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="noopener">spaced
+            repetition flashcards</a>
           </p>
 
           <ul class="bulletPoints">
             <li>
-              <i class="fal fa-handshake"></i>
-              Multiplayer where partners can add audio, edits, notes, vocabulary
+              <i class="fal fa-chart-line"></i>
+              Spend less time reviewing a word the more you learn it
             </li>
             <li>
-              <i class="fal fa-thumbs-up"></i>
-              Get nagged when falling behind and get kudos when completing a goal
+              <i class="fal fa-books"></i>
+              Collect flashcards from our library of starter decks and
+              booster packs
             </li>
             <li>
-              <i class="fal fa-envelope"></i>
-              Weekly reports in your inboxes on learning progress and statistics
+              <i class="fal fa-sparkles"></i>
+              Get audio, lookups, translations, and breakdowns for any word or phrase 
             </li>
           </ul>
         </div>
@@ -453,7 +452,7 @@
     <div class="sectionInner">
       <h3>About Me</h3>
 
-      <img src="/assets/img/me.jpg">
+      <img src="/assets/img/us.jpg">
 
       <p>
         Hey! I’m <a href="https://twitter.com/kevopuff" target="_blank" rel="noopener">Kevin</a>, a developer
