--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <div>
           <p>
-            Lock words into memory with <a href="https://wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="noopener">spaced
+            Lock words into memory with <a href="https://ncase.me/remember/" target="_blank" rel="noopener">spaced
             repetition flashcards</a>
           </p>
 
