--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
         <p class="subtitle">Learn a language with your native speaking partner</p>
 
         <a class="button ctaButton" href="/app">
-          <i class="fal fa-rocket"></i>
-          Launch Coupling in Your Browser
+          <p>
+            <i class="fal fa-rocket"></i>
+            <span>Launch Coupling in Your Browser</span>
+          </p>
+          <p class="tooltip">Over 100 Languages Supported</p>
         </a>
       </div>
 
@@ -432,6 +435,11 @@
         
       
       </ul>
+
+      <a class="button" href="https://coupling.substack.com" target="_blank">
+        <i class="fal fa-newspaper"></i>
+        Subscribe to the Newsletter
+      </a>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
