--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,9 +2,9 @@
 <meta name="title" content="Coupling | Privacy Policy">
 <meta name="og:title" content="Coupling | Privacy Policy">
 <meta name="twitter:title" content="Coupling | Privacy Policy">
-<meta name="description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
-<meta name="og:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
-<meta name="twitter:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
+<meta name="description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Learn together, grow together.">
+<meta name="og:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Learn together, grow together.">
+<meta name="twitter:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Learn together, grow together.">
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
