--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<title>Coupling | Learn Your Loved One's Language</title>
-<meta name="title" content="Coupling | Learn Your Loved One's Language">
-<meta name="og:title" content="Coupling | Learn Your Loved One's Language">
-<meta name="twitter:title" content="Coupling | Learn Your Loved One's Language">
-<meta name="description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
-<meta name="og:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
-<meta name="twitter:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Plug your partner into your language journey and bring it life">
+<title>Coupling | Language Together</title>
+<meta name="title" content="Coupling | Language Together">
+<meta name="og:title" content="Coupling | Language Together">
+<meta name="twitter:title" content="Coupling | Language Together">
+<meta name="description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Learn together, grow together.">
+<meta name="og:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Learn together, grow together.">
+<meta name="twitter:description" content="The language learning app for couples (e.g., Chinese, Spanish, French). Learn together, grow together.">
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
