--- a/privacy/index.html
+++ b/privacy/index.html
@@ -8,13 +8,12 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
-<meta name="image" content="https://learncoupling.com/assets/img/preview.png">
-<meta name="og:image" content="https://learncoupling.com/assets/img/preview.png">
-<meta name="twitter:image" content="https://learncoupling.com/assets/img/preview.png">
+<meta name="image" content="https://couplingcafe.com/assets/img/preview.png">
+<meta name="og:image" content="https://couplingcafe.com/assets/img/preview.png">
+<meta name="twitter:image" content="https://couplingcafe.com/assets/img/preview.png">
 <meta name="twitter:card" content="summary">
 <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
 <meta name="theme-color" content="#555588"/>
-
 <noscript><style>body{opacity: 1 !important;}</style></noscript>
 
 <script>
