--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <h2 class="title">The Language Learning App for Couples</h2>
 
-        <img class="hero heroImgMobile" src="/assets/img/screenshots/hero.png">
+        <img class="hero heroImgMobile" src="/assets/img/screenshots/hero2.png">
 
         <p class="subtitle">Words That Stay &mdash; Bonds That Grow</p>
 
@@ -50,29 +50,73 @@
           </a>
         </div>
 
-        <!--
-        <span class="langSupport">
-          <i class="fad fa-earth-americas"></i>
-          Supports every language
-        </p>
-        -->
-
         <div class="additionalLinks">
           <a class="button green text-red" href="https://coupling.substack.com/p/coupling-language-together-now-available" target="_blank" rel="noopener">
             <i class="fad fa-leaf-heart"></i>
-            Coupling's Valentine's Day Release!
+            Read Coupling's Valentine Release
           </a>
 
           <a class="button blue" href="https://coupling.substack.com/p/a-complete-tour-of-coupling-cafe" target="_blank" rel="noopener">
             <i class="fad fa-flag-checkered"></i>
-            Complete Tour of the App
+            Read the App Tour
           </a>
         </div>
       </div>
 
-      <img class="hero heroImgDesktop" src="/assets/img/screenshots/hero.png">
+      <img class="hero heroImgDesktop" src="/assets/img/screenshots/hero2.png">
     </div>
     
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="intro">
+    <div class="sectionInner">
+      <h3>
+        <i class="fad fa-trees"></i>
+        Learn Together, Grow Together
+      </h3>
+
+      <div class="sectionInnerColumns">
+        <img src="/assets/img/screenshots/together.png">
+
+        <div>
+          <p class="sectionSubtitle">
+            Learn a language through your partner in a shared adventure
+          </p>
+
+          <ul class="bulletPoints">
+            <li>
+              <i class="fad fa-people-arrows"></i>
+              Ditch the solo grind, fuel your motivation with your partner's support 
+            </li>
+            <li>
+              <i class="fad fa-message-smile"></i>
+              Avoid outdated textbook phrases. Talk like a local from their region
+            </li>
+            <li>
+              <i class="fad fa-heart"></i>
+              Deepen your bond by immersing in their language and culture 
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
@@ -95,30 +139,34 @@
   <section class="partner">
     <div class="sectionInner">
       <h3>
-        <i class="fad fa-trees"></i>
-        Learn Together, Grow Together
+        <i class="fad fa-gift"></i>
+        The Gift of Language
       </h3>
 
-      <div class="sectionInnerColumns reverse">
-        <img src="/assets/img/screenshots/Packs.png">
+      <div class="sectionInnerColumns">
+        <img src="/assets/img/screenshots/construction.png">
 
         <div>
           <p class="sectionSubtitle">
-            Make your language journey a shared adventure
+            Add life to your language journey with your partner's touch
           </p>
 
           <ul class="bulletPoints">
             <li>
               <i class="fad fa-hand-holding-heart"></i>
-              Tailored lessons lovingly handcrafted by your partner
+              Receive personalized content lovingly handcrafted by your partner 
             </li>
             <li>
-              <i class="fad fa-people-arrows"></i>
-              Ditch the solo grind, fuel your motivation with your partner's support 
+              <i class="fad fa-music"></i>
+              Hear your partner's voice every step of the way with seamless audio recordings   
             </li>
             <li>
-              <i class="fad fa-message-smile"></i>
-              Avoid outdated phrases. Talk like a local native 
+              <i class="fad fa-typewriter"></i>
+              Immerse with crafted sentences tailored to your life and relationship
+            </li>
+            <li>
+              <i class="fad fa-person-chalkboard"></i>
+              Introduce content effortlessly with an intuitive interface with AI assistance
             </li>
           </ul>
         </div>
@@ -151,25 +199,76 @@
       </h3>
 
       <div class="sectionInnerColumns">
-        <img src="/assets/img/screenshots/Study.png">
+        <img src="/assets/img/screenshots/study2.png">
 
         <div>
           <p class="sectionSubtitle">
-            Never forget a word with our scientifically proven <a href="https://ncase.me/remember/" target="_blank" rel="noopener">spaced repetition system</a>
+            Never forget a word with our enhanced <a href="https://ncase.me/remember/" target="_blank" rel="noopener">spaced repetition system</a>
           </p>
 
           <ul class="bulletPoints">
             <li>
               <i class="fad fa-timer"></i>
-              Boost memory by reviewing words right when you're about to forget them
+              Review words just before you forget them for guaranteed retention
             </li>
             <li>
               <i class="fad fa-chart-line"></i>
-              The more you master a word, the less time you need to spend on it
+              Spend less time on mastered words, freeing up time for new ones
             </li>
             <li>
               <i class="fad fa-books"></i>
-              Access audio, notes, lookups, breakdowns for any word or phrase
+              Access audio, images, notes, or breakdowns for any word 
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="path">
+    <div class="sectionInner">
+      <h3>
+        <i class="fad fa-fire-flame"></i>
+        Blaze Your Own Path
+      </h3>
+
+      <div class="sectionInnerColumns">
+        <img src="/assets/img/screenshots/path.png">
+
+        <div>
+          <p class="sectionSubtitle">
+            Embark on an organic journey where you chart the course
+          </p>
+
+          <ul class="bulletPoints">
+            <li>
+              <i class="fad fa-person-rays"></i>
+              Learn what matters most to you, your relationship, your interests, and your daily life
+            </li>
+            <li>
+              <i class="fad fa-shelves"></i>
+              Explore over 500 curated packs containing thousands of words of all categories 
+            </li>
+            <li>
+              <i class="fad fa-person-from-portal"></i>
+              Tailor your path to meet your goals: learning first words, talking with family, visiting a country, or expressing love 
             </li>
           </ul>
         </div>
@@ -262,7 +361,7 @@
 
       <a class="button" href="https://coupling.substack.com" target="_blank">
         <i class="fad fa-newspaper"></i>
-        Subscribe to the Newsletter
+        Read the Blog
       </a>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -286,17 +385,24 @@
 
   <section class="about">
     <div class="sectionInner">
-      <h3>About Us</h3>
+      <h3>
+        <i class="fad fa-people"></i>
+        About Us
+      </h3>
 
       <img src="/assets/img/us.jpg">
 
       <p>
-        Hey! We're <a href="https://twitter.com/kevopuff" target="_blank" rel="noopener">Kevin</a> and
-        <a href="https://puffygang.com" target="_blank" rel="noopener">Heidi</a>, a husband and wife team. Kevin
-        has been learning Cantonese and Chinese for years on his own
-        despite having Heidi around him all the time. We started Coupling to
-        help ourselves and other couples to make it easy and fun to learn
-        languages from each other
+        Hey! We're <a href="https://twitter.com/kevopuff" target="_blank" rel="noopener">Kevin</a> and <a
+        href="https://puffygang">Heidi</a>. Kevin was learning Cantonese for
+        years <b>on his own</b>, despite Heidi always being around. We thought there
+        should be a way to involve her in the process.
+      </p>
+        
+      <p>
+        So we
+        started Coupling to help ourselves and other couples to make language
+        learning a shared journey 
       </p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
