--- a/index.html
+++ b/index.html
@@ -49,23 +49,62 @@
             <img src="/assets/img/social/googlePlay.png">
           </a>
         </div>
-
-        <div class="additionalLinks">
-          <a class="button green text-red" href="https://coupling.substack.com/p/coupling-language-together-now-available" target="_blank" rel="noopener">
-            <i class="fad fa-leaf-heart"></i>
-            Read Coupling's Valentine Release
-          </a>
-
-          <a class="button blue" href="https://coupling.substack.com/p/a-complete-tour-of-coupling-cafe" target="_blank" rel="noopener">
-            <i class="fad fa-flag-checkered"></i>
-            Read the App Tour
-          </a>
-        </div>
       </div>
 
       <img class="hero heroImgDesktop" src="/assets/img/screenshots/hero2.png">
     </div>
     
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="howItWorks">
+    <div class="sectionInner">
+      <h3>
+        <i class="fad fa-heart-pulse"></i>
+        How It Works
+      </h3>
+
+      <ul class="howItWorksItems">
+        <li>
+          <img src="/assets/img/screenshots/path.png">
+
+          <div class="text">
+            <h4>1. Choose Words You Want to Learn</h4>
+            <p>Select words you want to learn based on your life and interests</p>
+          </div>
+        </li>
+        <li>
+          <img src="/assets/img/screenshots/construction.png">
+          <div class="text">
+            <h4>2. Partner Adds the Words</h4>
+            <p>Your partner adds these words to your learning deck with their personal touch</p>
+          </div>
+        </li>
+        <li>
+          <img src="/assets/img/screenshots/study2.png">
+          <div class="text">
+            <h4>3. Master the Words</h4>
+            <p>Watch your language skills and relationship grow in a few minutes per day</p>
+          </div>
+        </li>
+      </ul>
+    </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
@@ -404,6 +443,12 @@
         started Coupling to help ourselves and other couples to make language
         learning a shared journey 
       </p>
+
+
+      <a class="button green text-red" href="https://coupling.substack.com/p/coupling-language-together-now-available" target="_blank" rel="noopener">
+        <i class="fad fa-leaf-heart"></i>
+        Read More 
+      </a>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
