--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <img class="hero heroImgDesktop" src="/assets/img/screenshots/hero2.png">
     </div>
-    
+
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="rgba(0,0,0,0)"/>
@@ -84,7 +84,7 @@
             that has it beat</b> if you are in a relationship that can take
             advantage of it"
           </p>
-          <p class="attr">xefjord &mdash; Creator of <a href="https://xefjord.wixsite.com/xefscompletelangs" target="_blank" rel="noopener">Xefjord's Complete Language Series</a> and Unofficial Duolingo Discord, learning Taiwanese Mandarin</p> 
+          <p class="attr">xefjord &mdash; Creator of <a href="https://xefjord.wixsite.com/xefscompletelangs" target="_blank" rel="noopener">Xefjord's Complete Language Series</a>, learning Taiwanese Mandarin</p>
         </li>
 
         <li>
@@ -94,7 +94,7 @@
             taps right into the motivation that comes from having a Bosnian
             spouse and child"
           </p>
-          <p class="attr">Gaspard &mdash; Netherlands, learning Bosnian</p> 
+          <p class="attr">Gaspard &mdash; Netherlands, learning Bosnian</p>
         </li>
 
       <li>
@@ -104,7 +104,7 @@
             partner's language as they actually speak it</b>... Highly recommend if
             you've been frustrated by cookie-cutter formal language apps!"
           </p>
-          <p class="attr">Kat &mdash; DC, learning Taiwanese Mandarin</p> 
+          <p class="attr">Kat &mdash; DC, learning Taiwanese Mandarin</p>
         </li>
 
     </div>
@@ -201,7 +201,7 @@
           <ul class="bulletPoints">
             <li>
               <i class="fad fa-people-arrows"></i>
-              Ditch the solo grind, fuel your motivation with your partner's support 
+              Ditch the solo grind, fuel your motivation with your partner's support
             </li>
             <li>
               <i class="fad fa-message-smile"></i>
@@ -209,7 +209,7 @@
             </li>
             <li>
               <i class="fad fa-heart"></i>
-              Deepen your bond by immersing in their language and culture 
+              Deepen your bond by immersing in their language and culture
             </li>
           </ul>
         </div>
@@ -252,11 +252,11 @@
           <ul class="bulletPoints">
             <li>
               <i class="fad fa-hand-holding-heart"></i>
-              Receive personalized content lovingly handcrafted by your partner 
+              Receive personalized content lovingly handcrafted by your partner
             </li>
             <li>
               <i class="fad fa-music"></i>
-              Hear your partner's voice every step of the way with seamless audio recordings   
+              Hear your partner's voice every step of the way with seamless audio recordings
             </li>
             <li>
               <i class="fad fa-typewriter"></i>
@@ -315,7 +315,7 @@
             </li>
             <li>
               <i class="fad fa-books"></i>
-              Access audio, images, notes, or breakdowns for any word 
+              Access audio, images, notes, or breakdowns for any word
             </li>
           </ul>
         </div>
@@ -362,11 +362,11 @@
             </li>
             <li>
               <i class="fad fa-shelves"></i>
-              Explore over 500 curated packs containing thousands of words of all categories 
+              Explore over 500 curated packs containing thousands of words of all categories
             </li>
             <li>
               <i class="fad fa-person-from-portal"></i>
-              Tailor your path to meet your goals: learning first words, talking with family, visiting a country, or expressing love 
+              Tailor your path to meet your goals: learning first words, talking with family, visiting a country, or expressing love
             </li>
           </ul>
         </div>
@@ -496,17 +496,17 @@
         years <b>on his own</b>, despite Heidi always being around. We thought there
         should be a way to involve her in the process.
       </p>
-        
+
       <p>
         So we
         started Coupling to help ourselves and other couples to make language
-        learning a shared journey 
+        learning a shared journey
       </p>
 
 
       <a class="button green text-red" href="https://coupling.substack.com/p/coupling-language-together-now-available" target="_blank" rel="noopener">
         <i class="fad fa-leaf-heart"></i>
-        Read More 
+        Read More
       </a>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
