--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
           <img class="logo" src="/assets/img/logo.svg">
         </div>
 
-        <h2 class="title">The Language Learning App for Couples</h2>
+        <h2 class="title">Learn a Language From Your Partner</h2>
 
-        <img class="hero heroImgMobile" src="/assets/img/screenshots/hero2.png">
+        <div class="hero heroImgMobile">
+          <video controls src="/assets/coupling.mp4" playsinline poster="/assets/img/placeholder.jpg"></video>
+        </div>
 
         <p class="subtitle">Words That Stay &mdash; Bonds That Grow</p>
 
@@ -51,7 +53,9 @@
         </div>
       </div>
 
-      <img class="hero heroImgDesktop" src="/assets/img/screenshots/hero2.png">
+      <div class="hero heroImgDesktop">
+        <video controls src="/assets/coupling.mp4" playsinline poster="/assets/img/placeholder.jpg"></video>
+      </div>
     </div>
 
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
