--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <img src="/assets/img/screenshots/2025/EnjoyFunExercises.png">
           <div class="text">
             <h4>3. Master the Words</h4>
-            <p>Watch your language skills grow in just a few minutes per day!</p>
+            <p>Grow closer together as your language mastery grows!</p>
           </div>
         </li>
       </ul>
